Update api documentation.
