# app/models/reservation.rb
@@ -1,5 +1,6 @@
 class Reservation < ApplicationRecord
   belongs_to :user
-  has_many :laptops, through: :laptop_reservations
-  has_many :laptop_reservations, dependent: :destroy
+  has_one :laptop_reservation, dependent: :destroy
+  has_one :laptop, through: :laptop_reservation
 end
+
