# config/routes.rb
@@ -13,6 +13,6 @@ Rails.application.routes.draw do
                      }
 
   resources :laptops, only: %i[index create show destroy]
-  resources :reservations, only: %i[show]
+  resources :reservations, only: %i[show index create destroy]
   resources :laptop_reservations
 end
