# swagger/v1/swagger.yaml
@@ -173,6 +173,24 @@ paths:
           description: Successful response
         "404":
           description: Laptop not found
+  /reservations:
+    get:
+      summary: Get all reservations
+      tags:
+        - Reservations
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Reservation"
+        "404":
+          description: Reservation not found
   /reservations/{id}:
     get:
       summary: Get a reservation by ID
@@ -242,6 +260,27 @@ paths:
               schema:
                 $ref: "#/components/schemas/Errors"
   /laptop_reservations/{id}:
+    get:
+      summary: Get a laptop reservation by ID
+      tags:
+        - LaptopReservations
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LaptopReservation"
+        "404":
+          description: Laptop reservation not found
     delete:
       summary: Delete a laptop reservation by ID
       tags:
